--- a/frontend/index.html
+++ b/frontend/index.html
@@ -100,13 +100,13 @@
                         <p class="comment">Amo a cremosidade do sorvete, muito bom!</p>
                     </div>
                     <div class="padrao-card card-4">
-                        <h2 class="nome-feedback">Alan Martins</h2>
+                        <h2 class="nome-feedback">Alan Gonçalves</h2>
                         <p class="funcao">Consumidor</p>
                         <div class="clissificacao"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
                         <p class="comment">Entrega super rápida e o sorvete chegou em perfeito estado. Muito bom!</p>
                     </div>
                     <div class="padrao-card card-5">
-                        <h2 class="nome-feedback">Thauan Paiva</h2>
+                        <h2 class="nome-feedback">Thauan Rabelo</h2>
                         <p class="funcao">Consumidor</p>
                         <div class="clissificacao"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
                         <p class="comment">O sabor de pistache é o melhor que já comi. Parabéns pela qualidade!</p>
@@ -225,10 +225,8 @@
                         <div class="clissificacao"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
                         <p class="comment">É uma opção de sobremesa. Não é a minha sorveteria favorita, mas quebra o galho.</p>
                     </div>
-                </div>
-                    
+                </div> 
             </section>
-
             </div>
         </div>
     <script src="js/script.js"></script>
